tests/integration/snapshots/integration__conformance__n_number_2.e+3.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
[2.e+3]
stdout ---

stderr ---
error: expected fraction digit following dot, found `e`
 --> stdin:1:4
  |
1 | [2.e+3]
  |  --^
  |  ||
  |  |decimal point found here
  |  number found here
