tests/integration/snapshots/integration__conformance__n_number_2.e-3.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
[2.e-3]
stderr ---
error: expected fraction digit following dot, found `e`
 --> stdin:1:4
  |
1 | [2.e-3]
  |  --^
  |  ||
  |  |decimal point found here
  |  number found here
