tests/integration/snapshots/integration__conformance__n_number_2.e3.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
[2.e3]
stdout ---

stderr ---
error: expected fraction digit following dot, found `e`
 --> stdin:1:4
  |
1 | [2.e3]
  |  --^
  |  ||
  |  |decimal point found here
  |  number found here
