tests/integration/snapshots/integration__conformance__n_number_9.e+.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
[9.e+]
stdout ---

stderr ---
error: expected fraction digit following dot, found `e`
 --> stdin:1:4
  |
1 | [9.e+]
  |  --^
  |  ||
  |  |decimal point found here
  |  number found here
